--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,5 +1,6 @@
-<h1>Admin panel</h1>
+
 <div class="dashboardContainer">
+    <h2>Dashboard</h2>
     <div>
         <a href="/admin/instructions/add">Add New Instruction</a>
     </div>
