--- a/views/showSubstance.ejs
+++ b/views/showSubstance.ejs
@@ -3,7 +3,7 @@
     <h1><%= substance.nameBg %></h1>
     <p><strong>ООН код:</strong> <%= substance.unNumber %></p> 
 
-    <p>Name: <strong><%= substance.nameEn %></strong></p>
+    <p>Наименование: <strong><%= substance.nameEn %></strong></p>
     <p>Код на опасност: <strong><%= substance.dangerNumber %></strong></p> 
     <p>Клас на опасност: <strong><%= substance.hazardClass %></strong></p>
     <p>Подклас на опасност: <strong><%= substance.hazardSubclass %></strong></p>
