--- a/public/css/style.css
+++ b/public/css/style.css
@@ -57,11 +57,33 @@ button:hover { background: #0256c7; }
 
 h1 {
     margin: 5px;
+    font-size: clamp(1.2rem, calc(2.2vw + 0.5rem), 1.8rem);
 }
 
 h3 {
     margin-left: 20px;
     margin-bottom: 5px;
+    font-size: clamp(1rem, calc(2.0vw + 0.4rem), 1.5rem);
+}
+
+.instruction h4 {
+    font-size: clamp(0.9rem, calc(1.9vw + 0.4rem), 1.3rem);
+    margin: 0;
+    padding: 5px 5px 0 5px;
+    background-color: orange;
+}
+
+.container {
+    padding: 15px;
+}
+
+.container a, .container a:visited {
+    color: #775700;
+    text-decoration: none;
+}
+
+.container a:hover {
+    text-decoration: underline;
 }
 
 .searchContainer {
@@ -141,6 +163,7 @@ h3 {
 }
 
 .unNumber {
+    padding-left: 5px;
     font-size: 14pt;
     margin-top: 10px;
     grid-area: unNumber;
@@ -151,6 +174,7 @@ h3 {
 }
 
 .nameBg {    
+    padding-left: 5px;
     font-size: 14pt;
     margin-top: 10px;
     grid-area: nameBg;
@@ -161,16 +185,19 @@ h3 {
 }
 
 .nameEn {
+    padding-left: 5px;
     margin-top: 10px;
     grid-area: nameEn;
 }
 
 .description {
+    padding-left: 5px;
     margin-top: 10px;
     grid-area: description;
 }
 
 .imagesContainer {
+    padding-left: 5px;
     margin-top: 10px;
     grid-area: imagesContainer;
 }
@@ -183,6 +210,7 @@ h3 {
 }
 
 .hazardClass {
+    padding-left: 5px;
     margin-top: 10px;
     grid-area: hazardClass;
 }
@@ -192,6 +220,7 @@ h3 {
 }
 
 .dangerNumber {
+    padding-left: 5px;
     margin-top: 10px;
     grid-area: dangerNumber;
 }
@@ -336,12 +365,11 @@ h3 {
 }
 
 .instruction .description {
-    background-color: orange;
+    
     padding: 5px;
 }
 
 .instruction .ck-content {
-    background-color: white;
     font-size: 14pt;
 }
 
