--- a/views/404.ejs
+++ b/views/404.ejs
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>404 - Page Not Found</h1>
-        <p>Sorry, the requested URL <strong><%= url %></strong> was not found on this server.</p>
-        <a href="/">Go back to Home</a>
+        <h1>404 - Страницата не бе намерена</h1>
+        <p>Съжаляваме, заявената страница <strong><%= url %></strong> не беше намерена на сървъра.</p>
+        <a href="/">Обратно към начало</a>
     </div>
 </body>
 </html>
