--- a/views/error.ejs
+++ b/views/error.ejs
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>Error</h1>
+        <h1>Грешка</h1>
         <p><%= message %></p>
-        <p><a href="/">Go back to Home</a></p>
+        <p><a href="/">Обратно към начало</a></p>
     </div>
 </body>
 </html>
